# mini-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.slim  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/mini_agent/: __init__.py  cli.py
src/mini_agent/agent/: __init__.py  agent.py  loop.py  types.py
src/mini_agent/ai/: __init__.py  event_stream.py  stream.py  types.py
src/mini_agent/ai/providers/: __init__.py  anthropic.py  base.py  openai.py  registry.py
src/mini_agent/session/: __init__.py  manager.py  storage.py
src/mini_agent/tools/: __init__.py  base.py  bash.py  diff_utils.py  edit.py  find.py  grep.py  ls.py  read.py  registry.py  text_utils.py  truncate.py  write.py
src/mini_agent/tui/: __init__.py  app.py  theme.py  widgets.py
tests/: __init__.py  test_diff_utils.py  test_event_stream.py  test_provider_detection.py  test_session.py  test_text_utils.py  test_tools.py  test_truncate.py  test_types.py
